// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Fact and figures 1 col renders correctly 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item is-first"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-bar ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--chart-bar"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Lorem ipsum
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__sources"
    >
      <span
        class="ecl-fact-figures__sources-label"
      >
        Sources:
      </span>
      <ul
        class="ecl-fact-figures__sources-list"
      >
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 1 col renders correctly when centerd 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1 ecl-fact-figures--centered"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item is-first"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-bar ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--chart-bar"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Lorem ipsum
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__sources"
    >
      <span
        class="ecl-fact-figures__sources-label"
      >
        Sources:
      </span>
      <ul
        class="ecl-fact-figures__sources-list"
      >
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 1 col renders correctly whit large icons 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item is-first"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-bar ecl-icon ecl-icon--2xl ecl-fact-figures__icon ecl-icon-phosphor--chart-bar"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Lorem ipsum
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__sources"
    >
      <span
        class="ecl-fact-figures__sources-label"
      >
        Sources:
      </span>
      <ul
        class="ecl-fact-figures__sources-list"
      >
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 1 col renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item is-first"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-bar ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--chart-bar"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Lorem ipsum
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__sources"
    >
      <span
        class="ecl-fact-figures__sources-label"
      >
        Sources:
      </span>
      <ul
        class="ecl-fact-figures__sources-list"
      >
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 1 col renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1 custom-class custom-class--test"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item is-first"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-bar ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--chart-bar"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Lorem ipsum
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__sources"
    >
      <span
        class="ecl-fact-figures__sources-label"
      >
        Sources:
      </span>
      <ul
        class="ecl-fact-figures__sources-list"
      >
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 2 cols renders correctly 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-2"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item is-first"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-bar ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--chart-bar"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Lorem ipsum
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--table ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--table"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Sed hendrerit
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Turpis varius congue venenatis, erat dui feugiat felis.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__sources"
    >
      <span
        class="ecl-fact-figures__sources-label"
      >
        Sources:
      </span>
      <ul
        class="ecl-fact-figures__sources-list"
      >
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 3 cols renders correctly 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-3"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item is-first"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-bar ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--chart-bar"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Lorem ipsum
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--table ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--table"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Sed hendrerit
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Turpis varius congue venenatis, erat dui feugiat felis.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-line-up ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--chart-line-up"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Donec suscipit interdum augue, ac dapibus eros finibus a.
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--network ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--network"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Aenean dapibus
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--sliders ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--sliders"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Lorem ipsum
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--image ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--image"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Sed hendrerit
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Turpis varius congue venenatis, erat dui feugiat felis.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__sources"
    >
      <span
        class="ecl-fact-figures__sources-label"
      >
        Sources:
      </span>
      <ul
        class="ecl-fact-figures__sources-list"
      >
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 4 cols renders correctly 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-4"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item is-first"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-bar ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--chart-bar"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Lorem ipsum
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--table ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--table"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Sed hendrerit
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Turpis varius congue venenatis, erat dui feugiat felis.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-line-up ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--chart-line-up"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Donec suscipit interdum augue, ac dapibus eros finibus a.
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--network ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--network"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Aenean dapibus
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--sliders ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--sliders"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Lorem ipsum
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--image ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--image"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Sed hendrerit
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Turpis varius congue venenatis, erat dui feugiat felis.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--globe ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--globe"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Donec suscipit interdum augue, ac dapibus eros finibus a.
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--presentation ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--presentation"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million                        
          <span
            class="ecl-fact-figures__title"
          >
            Aenean dapibus
          </span>
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__sources"
    >
      <span
        class="ecl-fact-figures__sources-label"
      >
        Sources:
      </span>
      <ul
        class="ecl-fact-figures__sources-list"
      >
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures without title renders correctly 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item is-first"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-bar ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--chart-bar"
        />
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million        
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__sources"
    >
      <span
        class="ecl-fact-figures__sources-label"
      >
        Sources:
      </span>
      <ul
        class="ecl-fact-figures__sources-list"
      >
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures without value renders correctly 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item is-first"
      >
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--chart-bar ecl-icon ecl-icon--l ecl-fact-figures__icon ecl-icon-phosphor--chart-bar"
        />
        <div
          class="ecl-fact-figures__title"
        >
          Lorem ipsum
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
        <div
          class="ecl-fact-figures__sources"
        >
          <span
            class="ecl-fact-figures__sources-label"
          >
            Sources:
          </span>
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__sources"
    >
      <span
        class="ecl-fact-figures__sources-label"
      >
        Sources:
      </span>
      <ul
        class="ecl-fact-figures__sources-list"
      >
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            DG CNECT
          </a>
        </li>
        <li
          class="ecl-fact-figures__sources-item"
        >
          <a
            class="ecl-link ecl-fact-figures__source"
            href="/example"
          >
            Eurostat
          </a>
        </li>
      </ul>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <span
          aria-hidden="true"
          class="wt-icon-phosphor--arrow-right ecl-icon ecl-icon--xs ecl-link__icon ecl-icon-phosphor--arrow-right"
        />
      </a>
    </div>
  </div>
</jest>
`;
